--- a/client/package.json
+++ b/client/package.json
@@ -12,5 +12,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-scripts": "^5.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.39.0",
+    "eslint-plugin-react": "^7.32.2"
   }
 }
