--- a/server/package.json
+++ b/server/package.json
@@ -14,5 +14,8 @@
     "express": "^4.18.2",
     "express-json": "^1.0.0",
     "mongoose": "^7.0.4"
+  },
+  "devDependencies": {
+    "eslint": "^8.39.0"
   }
 }
